--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,8 @@
                         <id>validate</id>
                         <phase>validate</phase>
                         <configuration>
-                            <configLocation>build/checkstyle/checkstyle.xml</configLocation>
-                            <suppressionsLocation>build/checkstyle/checkstyle-suppressions.xml</suppressionsLocation>
+                            <configLocation>checkstyle/checkstyle.xml</configLocation>
+                            <suppressionsLocation>checkstyle/checkstyle-suppressions.xml</suppressionsLocation>
                             <encoding>UTF-8</encoding>
                             <consoleOutput>true</consoleOutput>
                             <failsOnError>true</failsOnError>
