--- a/AuthorService/pom.xml
+++ b/AuthorService/pom.xml
@@ -10,9 +10,9 @@
     </parent>
 
     <groupId>ru.example.cloudModuleTest.AutorService</groupId>
-    <artifactId>CloudModuleTestAuthorService</artifactId>
+    <artifactId>AuthorService</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>CloudModuleTestAuthorService</name>
+    <name>AuthorService</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
