it does not work

--- a/AuthorService/pom.xml
+++ b/AuthorService/pom.xml
@@ -9,7 +9,6 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>ru.example.cloudModuleTest.AutorService</groupId>
     <artifactId>AuthorService</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>AuthorService</name>
@@ -17,6 +16,7 @@
 
     <properties>
         <java.version>17</java.version>
+        <spring-cloud.version>4.0.3</spring-cloud.version>
     </properties>
 
     <dependencies>
@@ -28,6 +28,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
 
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -41,6 +42,19 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-config</artifactId>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
