--- a/ConfigService/src/main/resources/shared/ServiceDiscovery.yml
+++ b/ConfigService/src/main/resources/shared/ServiceDiscovery.yml
@@ -5,7 +5,7 @@ server:
     port: 9002
 eureka:
     client:
-        registerWithEureka: false
-        fetchRegistry: false
+        register-with-eureka: false
+        fetch-registry: false
         serviceUrl:
             defaultZone: http://localhost:9002/eureka/
