spring cloud has been added

--- a/RegistryService/src/main/resources/bootstrap.yml
+++ b/RegistryService/src/main/resources/bootstrap.yml
@@ -1,7 +1,7 @@
 spring:
     application:
-        name: ServiceDiscovery
+        name: RegistryService
     cloud:
         config:
-            name: ServiceDiscovery
+            name: RegistryService
             uri: http://localhost:9001
