--- a/ConfigService/src/main/resources/shared/RegistryService.yml
+++ b/ConfigService/src/main/resources/shared/RegistryService.yml
@@ -9,3 +9,5 @@ eureka:
         fetch-registry: false
         serviceUrl:
             defaultZone: http://localhost:9002/eureka/
+    instance:
+        instance-id: ${spring.application.name}:${random.value}
