--- a/RegistryService/pom.xml
+++ b/RegistryService/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>ServiceDiscovery</artifactId>
+    <artifactId>RegistryService</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>ServiceDiscovery</name>
     <description>Demo project for Spring Boot</description>
@@ -20,8 +20,12 @@
     </properties>
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter</artifactId>
+            <artifactId>spring-cloud-starter-bootstrap</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
