--- a/ConfigService/src/main/resources/bootstrap.yml
+++ b/ConfigService/src/main/resources/bootstrap.yml
@@ -13,4 +13,6 @@ server:
 eureka:
     client:
         serviceUrl:
-            defaultZone: http://localhost:8761/eureka/
+            defaultZone: http://registry-service:8761/eureka/
+        healthcheck:
+            enabled: true
