--- a/ConfigService/src/main/resources/shared/RegistryService.yml
+++ b/ConfigService/src/main/resources/shared/RegistryService.yml
@@ -8,6 +8,6 @@ eureka:
         register-with-eureka: false
         fetch-registry: false
         serviceUrl:
-            defaultZone: http://localhost:8761/eureka/
+            defaultZone: http://registry-service:8761/eureka/
     instance:
         instance-id: ${spring.application.name}:${random.value}
