--- a/GatewayService/src/main/resources/bootstrap.yml
+++ b/GatewayService/src/main/resources/bootstrap.yml
@@ -7,7 +7,19 @@ spring:
             discovery:
                 service-id: ConfigService
                 enabled: true
+            fail-fast: true
+            retry:
+                initial-interval: 3000
+                multiplier: 1
+                max-interval: 3000
+                max-attempts: 1200
 eureka:
     client:
         serviceUrl:
-            defaultZone: http://localhost:8761/eureka/
+            defaultZone: http://registry-service:8761/eureka/
+        initialInstanceInfoReplicationIntervalSeconds: 5
+        registry-fetch-retry:
+            enabled: true
+            initial-amount: 3000
+            multiplier: 1
+            max-attempts: 1200
