--- a/RegistryService/src/main/resources/bootstrap.yml
+++ b/RegistryService/src/main/resources/bootstrap.yml
@@ -4,4 +4,10 @@ spring:
     cloud:
         config:
             name: RegistryService
-            uri: http://localhost:8888
+            uri: http://config-service:8888
+            fail-fast: true
+            retry:
+                initial-interval: 3000
+                multiplier: 1
+                max-interval: 3000
+                max-attempts: 1200
