--- a/ProductConsoleConsumer/pom.xml
+++ b/ProductConsoleConsumer/pom.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -10,9 +9,9 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>AuthorService</artifactId>
+    <artifactId>ProductConsoleConsumer</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>AuthorService</name>
+    <name>ProductConsoleConsumer</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
