--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
         image: springcloudmoduletest-gatewayservice:1.0.0
         restart: unless-stopped
         ports:
-            - "8080:8080"
+            - "80:8080"
         networks:
             - cloudTestNetwork
         depends_on:
@@ -85,6 +85,55 @@ services:
             - cloudTestNetwork
         depends_on:
             - gateway-service
+
+    zookeeper:
+        image: confluentinc/cp-zookeeper:6.2.0
+        restart: unless-stopped
+        networks:
+            - cloudTestNetwork
+        environment:
+            ZOOKEEPER_CLIENT_PORT: 2181
+            ZOOKEEPER_TICK_TIME: 2000
+    kafka:
+        image: confluentinc/cp-kafka:7.0.0
+        restart: unless-stopped
+        networks:
+            - cloudTestNetwork
+        ports:
+            - "9092:9092"
+        depends_on:
+            - zookeeper
+        environment:
+            KAFKA_BROKER_ID: 1
+            KAFKA_ZOOKEEPER_CONNECT: 'zookeeper:2181'
+            KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
+            KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092,PLAINTEXT_INTERNAL://kafka:29092
+            KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+            KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
+            KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
+#    kafka-manager:
+#        image: hlebalbau/kafka-manager:stable
+#        restart: unless-stopped
+#        ports:
+#            - "9000:9000"
+#        environment:
+#            - ZK_HOSTS=zookeeper:2181
+#        networks:
+#            - cloudTestNetwork
+#        depends_on:
+#            - zookeeper
+    kafka-ui:
+        container_name: kafka-ui
+        image: provectuslabs/kafka-ui:latest
+        restart: unless-stopped
+        ports:
+            - "8080:8080"
+        environment:
+            DYNAMIC_CONFIG_ENABLED: true
+        networks:
+            - cloudTestNetwork
+        depends_on:
+            - zookeeper
 
 networks:
     cloudTestNetwork:
