--- a/pom.xml
+++ b/pom.xml
@@ -23,12 +23,12 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>3.1.1</version>
+                <version>3.1.2</version>
                 <dependencies>
                     <dependency>
                         <groupId>com.puppycrawl.tools</groupId>
                         <artifactId>checkstyle</artifactId>
-                        <version>8.26</version>
+                        <version>9.2</version>
                     </dependency>
                 </dependencies>
                 <executions>
@@ -70,6 +70,7 @@
         <module>ProductProducer</module>
         <module>ProductDatabaseConsumer</module>
         <module>ProductConsoleConsumer</module>
+        <module>GeocoderService</module>
     </modules>
 
 </project>
