--- a/GeocoderService/src/main/resources/application.yml
+++ b/GeocoderService/src/main/resources/application.yml
@@ -1,6 +1,9 @@
 spring:
     application:
         name: GeocoderService
+    redis:
+        host: redis
+        port: 6379
     datasource:
         url: jdbc:postgresql://database-postgres:5432/testCloudApplication
         username: haart
